// SPDX-FileCopyrightText: 2023 Steffen Vogel <post@steffenvogel.de>
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package cunicu.pdisc;
option go_package = "github.com/stv0g/cunicu/pkg/proto/feature/pdisc";

import "common.proto";
import "core/net.proto";

enum PeerDescriptionChange {
    ADD = 0;
    REMOVE = 1;
    UPDATE = 2;
}

message PeerAddresses {
    repeated core.IPAddress addresses = 1;
}

// A PeerDescription is an announcement of a peer which is distributed to 
message PeerDescription {
    PeerDescriptionChange change = 1;
    
    // Hostname of the node
    string name = 2;
    
    // Public WireGuard Curve25519 key
    bytes public_key = 3;

    // A new public WireGuard Curve25519 key
    // Only valid for change == PEER_UPDATE
    bytes public_key_new = 4;

    // List of allowed IPs
    repeated string allowed_ips = 5;

    // cunicu build information
    BuildInfo build_info = 6;

    // IP to Hostname mapping
    map<string, PeerAddresses> hosts = 7;
}
